deploy: 10b12b606ff548ff6378102e592df172cb106a2d

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       
       <div class="blah w-100">
         <h1 class="f3 fw1 athelas mt0 lh-title">
-          <a href="https://jacoblincool.github.io/leetcode-blog/posts/1465.maximum-area-of-a-piece-of-cake-after-horizontal-and-vertical-cuts/" class="color-inherit dim link">
+          <a href="https://jacoblincool.github.io/leetcode-blog/posts/1465/" class="color-inherit dim link">
             1465. Maximum Area of a Piece of Cake After Horizontal and Vertical Cuts
             </a>
         </h1>
@@ -141,7 +141,7 @@
 題目 You are given a rectangular cake of size h x w and two arrays of integers horizontalCuts and verticalCuts where:
  horizontalCuts[i] is the distance from the top of the rectangular cake to the ith horizontal cut and similarly, and verticalCuts[j] is the distance from the left of the rectangular cake to the jth vertical cut.
         </div>
-          <a href="https://jacoblincool.github.io/leetcode-blog/posts/1465.maximum-area-of-a-piece-of-cake-after-horizontal-and-vertical-cuts/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">繼續閱讀</a>
+          <a href="https://jacoblincool.github.io/leetcode-blog/posts/1465/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">繼續閱讀</a>
         
       </div>
     </div>
